# zgw-consumers

./: .bumpversion.cfg  .flake8  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  manage.py  pyproject.toml  pyright.pyproject.toml  setup.cfg  tox.ini  type-checking.in  type-checking.txt
.github/workflows/: ci.yml  code_quality.yml
docs/: commands.rst  conf.py  drf.rst  index.rst  model_fields.rst  models.rst  quickstart.rst  recipes.rst  reference.rst  settings.rst  setup_config.rst  testing.rst
testapp/: admin.py  api.py  models.py  settings.py
testapp/migrations/: 0001_initial.py  0002_auto_20221115_0738.py  0003_auto_20221115_1018.py  0004_zgwconfig.py  0005_delete_zgwconfig_and_more.py
tests/: conftest.py  test_admin.py  test_auth.py  test_certificates.py  test_clients.py  test_commands.py  test_component_generation.py  test_concurrency.py  test_config_adapter.py  test_configuration_steps.py  test_get_paginated_results.py  test_models.py  test_nlx_config.py  test_nlx_rewriting.py  test_oas_cache.py  test_oas_file.py  test_pagination_helper.py  test_schema_mocks.py  test_service_clear_cache.py  test_service_url_api.py  test_service_url_field.py  test_validation.py  test_zgw_services.py  test_zgw_services_legacy.py
tests/api_models/: test_optional_fields.py
tests/data/: Readme.md  invalid.certificate  test.certificate  test.key  test2.certificate  test2.key
tests/drf/: test_apimodel_serializer.py
tests/files/: services.yaml  setup_config_services.yaml  setup_config_services_all_fields.yaml  setup_config_services_required_fields.yaml
tests/schemas/: books.yaml  dummy.yaml  ztc.yaml
tests/schemas/nested/: schema.yaml
zgw_consumers/: __init__.py  admin.py  admin_fields.py  apps.py  cache.py  client.py  concurrent.py  constants.py  fields.py  forms.py  mixins.py  model_fields.py  models.py  nlx.py  service.py  settings.py  utils.py  widgets.py
zgw_consumers/api_models/: _camel_case.py  base.py  besluiten.py  catalogi.py  constants.py  documenten.py  types.py  zaken.py
zgw_consumers/contrib/setup_configuration/: models.py  steps.py
zgw_consumers/drf/: fields.py  serializers.py  utils.py
zgw_consumers/legacy/: __init__.py  client.py  nlx.py  service.py
zgw_consumers/locale/nl/LC_MESSAGES/: django.mo  django.po
zgw_consumers/management/commands/: dump_certs.py
zgw_consumers/migrations/: 0001_initial.py  0002_auto_20190514_0944.py  0003_auto_20190514_1009.py  0004_auto_20200113_1728.py  0005_auto_20200326_1040.py  0006_update_oas_auth.py  0007_service_nlx.py  0008_auto_20200331_1400.py  0009_auto_20200401_0829.py  0010_nlxconfig.py  0011_remove_service_extra.py  0012_auto_20210104_1039.py  0013_oas_field.py  0014_auto_20211217_1557.py  0015_auto_20220307_1522.py  0015_certificate.py  0016_auto_20220228_1257.py  0016_auto_20220818_1412.py  0017_auto_20220228_1658.py  0017_auto_20220818_1410.py  0017_auto_20220825_0752.py  0017_service_uuid.py  0018_populate_service_uuids.py  0019_alter_service_uuid.py  0020_service_timeout.py  0021_service_api_connection_check_path.py  0021_service_api_health_check_endpoint.py  0022_set_default_service_slug.py  0023_add_help_texts_to_service_fields.py  0024_alter_nlxconfig_directory.py  0024_remove_service_oas_remove_service_oas_file.py  0025_remove_service_oas_remove_service_oas_file.py  0025_service_jwt_valid_for.py  0026_remove_service_oas_remove_service_oas_file.py  0026_service_oidc_token_endpoint_alter_service_auth_type.py  0027_service_oauth2_scope_service_oauth2_token_url_and_more.py
zgw_consumers/models/: __init__.py  abstract.py  certificates.py  fields.py  lookups.py  services.py  validators.py
zgw_consumers/services/: models.py
zgw_consumers/templates/admin/widgets/: clearable_no_download_private_file_input.html
zgw_consumers/test/: __init__.py  component_generation.py  factories.py  schema_mock.py
