# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = zgw-consumers
version = 0.17.0
description = Reusable code for consumers of ZGW APIs
long_description = file: README.rst
url = https://github.com/maykinmedia/zgw-consumers
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = ZGW, Common Ground, GEMMA, VNG, API
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django
    django-choices
    django-privates
    django-relativedelta
    django-solo
    gemma-zds-client>=0.14.0
    requests
    # test package
    Faker>=0.7.0
    requests-mock
tests_require =
    django-redis
    pytest
    pytest-django
    requests-mock
    tox
    isort
    black
    tabulate

[options.extras_require]
db =
    psycopg2
drf =
    djangorestframework
tests =
    django-redis
    pytest
    pytest-django
    requests-mock
    tox
    isort
    black
    tabulate
pep8 =
    flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release = twine

[options.packages.find]
include =
    zgw_consumers
    zgw_consumers.*

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
; skip_glob =
known_django=django
known_first_party=zgw_consumers
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
junit_family = xunit2
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
max-line-length=88
exclude=env,.tox,doc

[flake8]
max-line-length=88
exclude=env,.tox,doc

[coverage:run]
source =
    zgw_consumers
branch = True
omit =
    zgw_consumers/migrations/*

[coverage:report]
exclude_lines =
    no cov
    no qa
    noqa
    pragma: no cover
    if __name__ == .__main__.:

[coverage:xml]
output=coverage.xml
