# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = zgw-consumers
version = 0.23.1
description = Configuration for service (OpenAPI 3 or other) consumers
long_description = file: README.rst
url = https://github.com/maykinmedia/zgw-consumers
project_urls =
    Documentation = https://zgw-consumers.readthedocs.io/en/latest/
    Changelog = https://github.com/maykinmedia/zgw-consumers/blob/main/changelog.rst
    Bug Tracker = https://github.com/maykinmedia/zgw-consumers/issues
    Source Code = https://github.com/maykinmedia/zgw-consumers
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = ZGW, Common Ground, VNG, API, OpenAPI, OAS, mTLS
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django >= 3.2.0
    django-choices
    django-relativedelta
    django-solo
    gemma-zds-client>=1.0.1
    django-simple-certmanager
    requests
    pyopenssl
    # test package
    Faker>=0.7.0
    requests-mock
tests_require =
    django-redis
    pytest
    pytest-django
    requests-mock
    tox
    isort
    black
    tabulate

[options.extras_require]
db =
    psycopg2
drf =
    djangorestframework
tests =
    django-redis
    pytest
    pytest-django
    requests-mock
    freezegun
    tox
    isort
    black
    tabulate
pep8 =
    flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release = twine

[options.packages.find]
include =
    zgw_consumers
    zgw_consumers.*

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
; skip_glob =
known_django=django
known_first_party=zgw_consumers
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
junit_family = xunit2
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
[flake8]
ignore=W293,W291,E501,E261
max-line-length=88
exclude=env,.tox

[coverage:run]
source =
    zgw_consumers
branch = True
omit =
    zgw_consumers/migrations/*

[coverage:report]
exclude_lines =
    no cov
    no qa
    noqa
    pragma: no cover
    if __name__ == .__main__.:

[coverage:xml]
output=coverage.xml
