# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = zgw-consumers
version = 0.30.0
description = Configuration for service (OpenAPI 3 or other) consumers
long_description = file: README.rst
url = https://github.com/maykinmedia/zgw-consumers
project_urls =
    Documentation = https://zgw-consumers.readthedocs.io/en/latest/
    Changelog = https://github.com/maykinmedia/zgw-consumers/blob/main/CHANGELOG.rst
    Bug Tracker = https://github.com/maykinmedia/zgw-consumers/issues
    Source Code = https://github.com/maykinmedia/zgw-consumers
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = ZGW, Common Ground, VNG, API, OpenAPI, OAS, mTLS
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    django>=3.2.0
    django-relativedelta>=2.0.0
    django-solo
    gemma-zds-client>=2.0.0
    django-simple-certmanager>=1.4.1
    requests
    ape-pie
tests_require =
    django-redis
    pytest
    pytest-django
    requests-mock
    tox
    isort
    black
    tabulate
    pyquery

[options.extras_require]
db =
    psycopg2
drf =
    djangorestframework
# These are not the test requirements! They are extras to be installed when making use of `zgw_consumers.test`
testutils =
    Faker>=0.7.0
    factory-boy
    requests-mock
tests =
    django-redis
    pytest
    pytest-django
    requests-mock
    freezegun
    tox
    isort
    black
    tabulate
    pyquery
pep8 =
    flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release = twine

[options.packages.find]
include =
    zgw_consumers
    zgw_consumers.*

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
; skip_glob =
known_django=django
known_first_party=zgw_consumers
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
junit_family = xunit2
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
[flake8]
ignore=W293,W291,E501,E261
max-line-length=88
exclude=env,.tox

[coverage:run]
source =
    zgw_consumers
branch = True
omit =
    zgw_consumers/migrations/*

[coverage:report]
exclude_lines =
    no cov
    no qa
    noqa
    pragma: no cover
    if __name__ == .__main__.:

[coverage:xml]
output=coverage.xml
